assignment5/y.output
Nonterminals useless in grammar

   assignment_operator


Terminals unused in grammar

   STRUCT
   TYPEDEF
   UNION
   ENUMERATION_CONSTANT
   MULT_ASSIGN
   DIV_ASSIGN
   MOD_ASSIGN
   SUM_ASSIGN
   SUBTRACT_ASSIGN
   LEFT_ASSIGN
   RIGHT_ASSIGN
   AND_ASSIGN
   XOR_ASSIGN
   OR_ASSIGN
   SINGLE_LINE_COMMENT
   MULT_LINE_COMMENT


Rules useless in grammar

  204 assignment_operator: ASSIGN_OP
  205                    | MULT_ASSIGN
  206                    | DIV_ASSIGN
  207                    | MOD_ASSIGN
  208                    | SUM_ASSIGN
  209                    | SUBTRACT_ASSIGN
  210                    | LEFT_ASSIGN
  211                    | RIGHT_ASSIGN
  212                    | AND_ASSIGN
  213                    | XOR_ASSIGN
  214                    | OR_ASSIGN


State 343 conflicts: 1 shift/reduce


Grammar

    0 $accept: start_exec $end

    1 start_exec: translation_unit

    2 translation_unit: external_declaration
    3                 | translation_unit external_declaration

    4 external_declaration: function_definition
    5                     | declaration

    6 function_definition: declaration_specifiers declarator declaration_list_opt F H compound_statement

    7 declaration_list_opt: declaration_list
    8                     | %empty

    9 declaration_list: declaration
   10                 | declaration_list declaration

   11 F: %empty

   12 H: %empty

   13 statement: labeled_statement
   14          | compound_statement
   15          | expression_statement
   16          | selection_statement
   17          | iteration_statement
   18          | jump_statement

   19 labeled_statement: IDENTIFIER ':' statement
   20                  | CASE constant_expression ':' statement
   21                  | DEFAULT ':' statement

   22 compound_statement: '{' block_item_list_opt '}'

   23 block_item_list_opt: block_item_list
   24                    | %empty

   25 block_item_list: block_item
   26                | block_item_list M block_item

   27 block_item: declaration
   28           | statement

   29 expression_statement: expression_opt ';'

   30 expression_opt: expression
   31               | %empty

   32 selection_statement: IF '(' expression ')' N M statement N ELSE M statement N
   33                    | IF '(' expression ')' N M statement N
   34                    | SWITCH '(' expression ')' statement

   35 iteration_statement: WHILE M '(' expression ')' N M statement
   36                    | DO M statement M WHILE '(' expression ')' N ';'
   37                    | FOR '(' expression_opt ';' M expression_opt N ';' M expression_opt N ')' M statement
   38                    | FOR '(' declaration expression_opt ';' expression_opt ')' statement

   39 jump_statement: GOTO IDENTIFIER ';'
   40               | CONTINUE ';'
   41               | BREAK ';'
   42               | RETURN expression_opt ';'

   43 declaration: declaration_specifiers init_declarator_list_opt ';'

   44 init_declarator_list_opt: init_declarator_list
   45                         | %empty

   46 declaration_specifiers: storage_class_specifier declaration_specifiers_opt
   47                       | type_specifier declaration_specifiers_opt
   48                       | type_qualifier declaration_specifiers_opt
   49                       | function_specifier declaration_specifiers_opt

   50 declaration_specifiers_opt: declaration_specifiers
   51                           | %empty

   52 init_declarator_list: init_declarator
   53                     | init_declarator_list ',' init_declarator

   54 init_declarator: declarator
   55                | declarator ASSIGN_OP initializer

   56 storage_class_specifier: EXTERN
   57                        | STATIC
   58                        | AUTO
   59                        | REGISTER

   60 type_specifier: VOID
   61               | CHAR
   62               | SHORT
   63               | INT
   64               | LONG
   65               | FLOAT
   66               | DOUBLE
   67               | SIGNED
   68               | UNSIGNED
   69               | BOOL
   70               | COMPLEX
   71               | IMAGINARY
   72               | enum_specifier

   73 specifier_qualifier_list: type_specifier specifier_qualifier_list_opt
   74                         | type_qualifier specifier_qualifier_list_opt

   75 specifier_qualifier_list_opt: specifier_qualifier_list
   76                             | %empty

   77 enum_specifier: ENUM identifier_opt '{' enumerator_list '}'
   78               | ENUM identifier_opt '{' enumerator_list ',' '}'
   79               | ENUM IDENTIFIER

   80 identifier_opt: IDENTIFIER
   81               | %empty

   82 enumerator_list: enumerator
   83                | enumerator_list ',' enumerator

   84 enumerator: enumeration_constant
   85           | enumeration_constant ASSIGN_OP constant_expression

   86 type_qualifier: CONST
   87               | RESTRICT
   88               | VOLATILE

   89 function_specifier: INLINE

   90 declarator: pointer_opt direct_declarator

   91 pointer_opt: pointer
   92            | %empty

   93 direct_declarator: IDENTIFIER
   94                  | '(' declarator ')'
   95                  | direct_declarator '[' type_qualifier_list_opt assignment_expression_opt ']'
   96                  | direct_declarator '[' STATIC type_qualifier_list_opt assignment_expression ']'
   97                  | direct_declarator '[' type_qualifier_list STATIC assignment_expression ']'
   98                  | direct_declarator '[' type_qualifier_list_opt '*' ']'
   99                  | direct_declarator '(' F parameter_type_list ')'
  100                  | direct_declarator '(' F identifier_list_opt ')'

  101 type_qualifier_list_opt: type_qualifier_list
  102                        | %empty

  103 assignment_expression_opt: assignment_expression
  104                          | %empty

  105 identifier_list_opt: identifier_list
  106                    | %empty

  107 pointer: '*' type_qualifier_list_opt
  108        | '*' type_qualifier_list_opt pointer

  109 type_qualifier_list: type_qualifier
  110                    | type_qualifier_list type_qualifier

  111 parameter_type_list: parameter_list
  112                    | parameter_list ',' ELLIPSIS

  113 parameter_list: parameter_declaration
  114               | parameter_list ',' parameter_declaration

  115 parameter_declaration: declaration_specifiers declarator
  116                      | declaration_specifiers

  117 identifier_list: IDENTIFIER
  118                | identifier_list ',' IDENTIFIER

  119 type_name: specifier_qualifier_list

  120 initializer: assignment_expression
  121            | '{' initializer_list '}'
  122            | '{' initializer_list ',' '}'

  123 initializer_list: designation_opt initializer
  124                 | initializer_list ',' designation_opt initializer

  125 designation_opt: designation
  126                | %empty

  127 designation: designator_list ASSIGN_OP

  128 designator_list: designator
  129                | designator_list designator

  130 designator: '[' constant_expression ']'
  131           | '.' IDENTIFIER

  132 expression: assignment_expression
  133           | expression ',' assignment_expression

  134 constant_expression: conditional_expression

  135 assignment_expression: conditional_expression
  136                      | unary_expression ASSIGN_OP assignment_expression

  137 conditional_expression: logical_OR_expression
  138                       | logical_OR_expression N '?' M expression N ':' M conditional_expression

  139 logical_OR_expression: logical_AND_expression
  140                      | logical_OR_expression OR_OP M logical_AND_expression

  141 logical_AND_expression: inclusive_OR_expression
  142                       | logical_AND_expression AND_OP M inclusive_OR_expression

  143 inclusive_OR_expression: exclusive_OR_expression
  144                        | inclusive_OR_expression '|' exclusive_OR_expression

  145 exclusive_OR_expression: AND_expression
  146                        | exclusive_OR_expression '^' M AND_expression

  147 AND_expression: equality_expression
  148               | AND_expression '&' equality_expression

  149 equality_expression: relational_expression
  150                    | equality_expression EQUALS_TO relational_expression
  151                    | equality_expression NOT_EQUALS_TO relational_expression

  152 relational_expression: shift_expression
  153                      | relational_expression '<' shift_expression
  154                      | relational_expression '>' shift_expression
  155                      | relational_expression LESS_THAN_EQUAL_TO shift_expression
  156                      | relational_expression GREATER_THAN_EQUAL_TO shift_expression

  157 shift_expression: additive_expression
  158                 | shift_expression LEFT_SHIFT_OP additive_expression
  159                 | shift_expression RIGHT_SHIFT_OP additive_expression

  160 additive_expression: multiplicative_expression
  161                    | additive_expression '+' multiplicative_expression
  162                    | additive_expression '-' multiplicative_expression

  163 multiplicative_expression: cast_expression
  164                          | multiplicative_expression '*' cast_expression
  165                          | multiplicative_expression '/' cast_expression
  166                          | multiplicative_expression '%' cast_expression

  167 cast_expression: unary_expression
  168                | '(' type_name ')' cast_expression

  169 unary_operator: '&'
  170               | '*'
  171               | '+'
  172               | '-'
  173               | '~'
  174               | '!'

  175 unary_expression: postfix_expression
  176                 | INCREMENT unary_expression
  177                 | DECREMENT unary_expression
  178                 | unary_operator cast_expression
  179                 | SIZEOF unary_expression
  180                 | SIZEOF '(' type_name ')'

  181 argument_expression_list_opt: argument_expression_list
  182                             | %empty

  183 argument_expression_list: assignment_expression
  184                         | argument_expression_list ',' assignment_expression

  185 postfix_expression: primary_expression
  186                   | postfix_expression '[' expression ']'
  187                   | postfix_expression '(' argument_expression_list_opt ')'
  188                   | postfix_expression '.' IDENTIFIER
  189                   | postfix_expression POINTER IDENTIFIER
  190                   | postfix_expression INCREMENT
  191                   | postfix_expression DECREMENT
  192                   | '(' type_name ')' '{' initializer_list '}'
  193                   | '(' type_name ')' '{' initializer_list ',' '}'

  194 primary_expression: IDENTIFIER
  195                   | constant
  196                   | STRING_LITERAL
  197                   | '(' expression ')'

  198 constant: INTEGER_CONSTANT
  199         | FLOATING_CONSTANT
  200         | CHARACTER_CONSTANT

  201 enumeration_constant: IDENTIFIER

  202 M: %empty

  203 N: %empty


Terminals, with rules where they appear

$end (0) 0
'!' (33) 174
'%' (37) 166
'&' (38) 148 169
'(' (40) 32 33 34 35 36 37 38 94 99 100 168 180 187 192 193 197
')' (41) 32 33 34 35 36 37 38 94 99 100 168 180 187 192 193 197
'*' (42) 98 107 108 164 170
'+' (43) 161 171
',' (44) 53 78 83 112 114 118 122 124 133 184 193
'-' (45) 162 172
'.' (46) 131 188
'/' (47) 165
':' (58) 19 20 21 138
';' (59) 29 36 37 38 39 40 41 42 43
'<' (60) 153
'>' (62) 154
'?' (63) 138
'[' (91) 95 96 97 98 130 186
']' (93) 95 96 97 98 130 186
'^' (94) 146
'{' (123) 22 77 78 121 122 192 193
'|' (124) 144
'}' (125) 22 77 78 121 122 192 193
'~' (126) 173
error (256)
AUTO (258) 58
BREAK (259) 41
CASE (260) 20
CHAR (261) 61
CONST (262) 86
CONTINUE (263) 40
DEFAULT (264) 21
DO (265) 36
DOUBLE (266) 66
ELSE (267) 32
ENUM (268) 77 78 79
EXTERN (269) 56
FLOAT (270) 65
FOR (271) 37 38
GOTO (272) 39
IF (273) 32 33
INLINE (274) 89
INT (275) 63
LONG (276) 64
REGISTER (277) 59
RESTRICT (278) 87
RETURN (279) 42
SHORT (280) 62
SIGNED (281) 67
SIZEOF (282) 179 180
STATIC (283) 57 96 97
STRUCT (284)
SWITCH (285) 34
TYPEDEF (286)
UNION (287)
UNSIGNED (288) 68
VOID (289) 60
VOLATILE (290) 88
WHILE (291) 35 36
BOOL (292) 69
COMPLEX (293) 70
IMAGINARY (294) 71
IDENTIFIER (295) 19 39 79 80 93 117 118 131 188 189 194 201
INTEGER_CONSTANT (296) 198
FLOATING_CONSTANT (297) 199
ENUMERATION_CONSTANT (298)
CHARACTER_CONSTANT (299) 200
STRING_LITERAL (300) 196
POINTER (301) 189
INCREMENT (302) 176 190
DECREMENT (303) 177 191
LEFT_SHIFT_OP (304) 158
RIGHT_SHIFT_OP (305) 159
LESS_THAN_EQUAL_TO (306) 155
GREATER_THAN_EQUAL_TO (307) 156
EQUALS_TO (308) 150
NOT_EQUALS_TO (309) 151
AND_OP (310) 142
OR_OP (311) 140
ELLIPSIS (312) 112
ASSIGN_OP (313) 55 85 127 136
MULT_ASSIGN (314)
DIV_ASSIGN (315)
MOD_ASSIGN (316)
SUM_ASSIGN (317)
SUBTRACT_ASSIGN (318)
LEFT_ASSIGN (319)
RIGHT_ASSIGN (320)
AND_ASSIGN (321)
XOR_ASSIGN (322)
OR_ASSIGN (323)
SINGLE_LINE_COMMENT (324)
MULT_LINE_COMMENT (325)


Nonterminals, with rules where they appear

$accept (94)
    on left: 0
start_exec (95)
    on left: 1, on right: 0
translation_unit (96)
    on left: 2 3, on right: 1 3
external_declaration (97)
    on left: 4 5, on right: 2 3
function_definition (98)
    on left: 6, on right: 4
declaration_list_opt (99)
    on left: 7 8, on right: 6
declaration_list (100)
    on left: 9 10, on right: 7 10
F (101)
    on left: 11, on right: 6 99 100
H (102)
    on left: 12, on right: 6
statement (103)
    on left: 13 14 15 16 17 18, on right: 19 20 21 28 32 33 34 35 36
    37 38
labeled_statement (104)
    on left: 19 20 21, on right: 13
compound_statement (105)
    on left: 22, on right: 6 14
block_item_list_opt (106)
    on left: 23 24, on right: 22
block_item_list (107)
    on left: 25 26, on right: 23 26
block_item (108)
    on left: 27 28, on right: 25 26
expression_statement (109)
    on left: 29, on right: 15
expression_opt (110)
    on left: 30 31, on right: 29 37 38 42
selection_statement (111)
    on left: 32 33 34, on right: 16
iteration_statement (112)
    on left: 35 36 37 38, on right: 17
jump_statement (113)
    on left: 39 40 41 42, on right: 18
declaration (114)
    on left: 43, on right: 5 9 10 27 38
init_declarator_list_opt (115)
    on left: 44 45, on right: 43
declaration_specifiers (116)
    on left: 46 47 48 49, on right: 6 43 50 115 116
declaration_specifiers_opt (117)
    on left: 50 51, on right: 46 47 48 49
init_declarator_list (118)
    on left: 52 53, on right: 44 53
init_declarator (119)
    on left: 54 55, on right: 52 53
storage_class_specifier (120)
    on left: 56 57 58 59, on right: 46
type_specifier (121)
    on left: 60 61 62 63 64 65 66 67 68 69 70 71 72, on right: 47 73
specifier_qualifier_list (122)
    on left: 73 74, on right: 75 119
specifier_qualifier_list_opt (123)
    on left: 75 76, on right: 73 74
enum_specifier (124)
    on left: 77 78 79, on right: 72
identifier_opt (125)
    on left: 80 81, on right: 77 78
enumerator_list (126)
    on left: 82 83, on right: 77 78 83
enumerator (127)
    on left: 84 85, on right: 82 83
type_qualifier (128)
    on left: 86 87 88, on right: 48 74 109 110
function_specifier (129)
    on left: 89, on right: 49
declarator (130)
    on left: 90, on right: 6 54 55 94 115
pointer_opt (131)
    on left: 91 92, on right: 90
direct_declarator (132)
    on left: 93 94 95 96 97 98 99 100, on right: 90 95 96 97 98 99
    100
type_qualifier_list_opt (133)
    on left: 101 102, on right: 95 96 98 107 108
assignment_expression_opt (134)
    on left: 103 104, on right: 95
identifier_list_opt (135)
    on left: 105 106, on right: 100
pointer (136)
    on left: 107 108, on right: 91 108
type_qualifier_list (137)
    on left: 109 110, on right: 97 101 110
parameter_type_list (138)
    on left: 111 112, on right: 99
parameter_list (139)
    on left: 113 114, on right: 111 112 114
parameter_declaration (140)
    on left: 115 116, on right: 113 114
identifier_list (141)
    on left: 117 118, on right: 105 118
type_name (142)
    on left: 119, on right: 168 180 192 193
initializer (143)
    on left: 120 121 122, on right: 55 123 124
initializer_list (144)
    on left: 123 124, on right: 121 122 124 192 193
designation_opt (145)
    on left: 125 126, on right: 123 124
designation (146)
    on left: 127, on right: 125
designator_list (147)
    on left: 128 129, on right: 127 129
designator (148)
    on left: 130 131, on right: 128 129
expression (149)
    on left: 132 133, on right: 30 32 33 34 35 36 133 138 186 197
constant_expression (150)
    on left: 134, on right: 20 85 130
assignment_expression (151)
    on left: 135 136, on right: 96 97 103 120 132 133 136 183 184
conditional_expression (152)
    on left: 137 138, on right: 134 135 138
logical_OR_expression (153)
    on left: 139 140, on right: 137 138 140
logical_AND_expression (154)
    on left: 141 142, on right: 139 140 142
inclusive_OR_expression (155)
    on left: 143 144, on right: 141 142 144
exclusive_OR_expression (156)
    on left: 145 146, on right: 143 144 146
AND_expression (157)
    on left: 147 148, on right: 145 146 148
equality_expression (158)
    on left: 149 150 151, on right: 147 148 150 151
relational_expression (159)
    on left: 152 153 154 155 156, on right: 149 150 151 153 154 155
    156
shift_expression (160)
    on left: 157 158 159, on right: 152 153 154 155 156 158 159
additive_expression (161)
    on left: 160 161 162, on right: 157 158 159 161 162
multiplicative_expression (162)
    on left: 163 164 165 166, on right: 160 161 162 164 165 166
cast_expression (163)
    on left: 167 168, on right: 163 164 165 166 168 178
unary_operator (164)
    on left: 169 170 171 172 173 174, on right: 178
unary_expression (165)
    on left: 175 176 177 178 179 180, on right: 136 167 176 177 179
argument_expression_list_opt (166)
    on left: 181 182, on right: 187
argument_expression_list (167)
    on left: 183 184, on right: 181 184
postfix_expression (168)
    on left: 185 186 187 188 189 190 191 192 193, on right: 175 186
    187 188 189 190 191
primary_expression (169)
    on left: 194 195 196 197, on right: 185
constant (170)
    on left: 198 199 200, on right: 195
enumeration_constant (171)
    on left: 201, on right: 84 85
M (172)
    on left: 202, on right: 26 32 33 35 36 37 138 140 142 146
N (173)
    on left: 203, on right: 32 33 35 36 37 138


State 0

    0 $accept: . start_exec $end

    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT      shift, and go to state 7
    INLINE     shift, and go to state 8
    INT        shift, and go to state 9
    LONG       shift, and go to state 10
    REGISTER   shift, and go to state 11
    RESTRICT   shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL       shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    start_exec               go to state 22
    translation_unit         go to state 23
    external_declaration     go to state 24
    function_definition      go to state 25
    declaration              go to state 26
    declaration_specifiers   go to state 27
    storage_class_specifier  go to state 28
    type_specifier           go to state 29
    enum_specifier           go to state 30
    type_qualifier           go to state 31
    function_specifier       go to state 32


State 1

   58 storage_class_specifier: AUTO .

    $default  reduce using rule 58 (storage_class_specifier)


State 2

   61 type_specifier: CHAR .

    $default  reduce using rule 61 (type_specifier)


State 3

   86 type_qualifier: CONST .

    $default  reduce using rule 86 (type_qualifier)


State 4

   66 type_specifier: DOUBLE .

    $default  reduce using rule 66 (type_specifier)


State 5

   77 enum_specifier: ENUM . identifier_opt '{' enumerator_list '}'
   78               | ENUM . identifier_opt '{' enumerator_list ',' '}'
   79               | ENUM . IDENTIFIER

    IDENTIFIER  shift, and go to state 33

    $default  reduce using rule 81 (identifier_opt)

    identifier_opt  go to state 34


State 6

   56 storage_class_specifier: EXTERN .

    $default  reduce using rule 56 (storage_class_specifier)


State 7

   65 type_specifier: FLOAT .

    $default  reduce using rule 65 (type_specifier)


State 8

   89 function_specifier: INLINE .

    $default  reduce using rule 89 (function_specifier)


State 9

   63 type_specifier: INT .

    $default  reduce using rule 63 (type_specifier)


State 10

   64 type_specifier: LONG .

    $default  reduce using rule 64 (type_specifier)


State 11

   59 storage_class_specifier: REGISTER .

    $default  reduce using rule 59 (storage_class_specifier)


State 12

   87 type_qualifier: RESTRICT .

    $default  reduce using rule 87 (type_qualifier)


State 13

   62 type_specifier: SHORT .

    $default  reduce using rule 62 (type_specifier)


State 14

   67 type_specifier: SIGNED .

    $default  reduce using rule 67 (type_specifier)


State 15

   57 storage_class_specifier: STATIC .

    $default  reduce using rule 57 (storage_class_specifier)


State 16

   68 type_specifier: UNSIGNED .

    $default  reduce using rule 68 (type_specifier)


State 17

   60 type_specifier: VOID .

    $default  reduce using rule 60 (type_specifier)


State 18

   88 type_qualifier: VOLATILE .

    $default  reduce using rule 88 (type_qualifier)


State 19

   69 type_specifier: BOOL .

    $default  reduce using rule 69 (type_specifier)


State 20

   70 type_specifier: COMPLEX .

    $default  reduce using rule 70 (type_specifier)


State 21

   71 type_specifier: IMAGINARY .

    $default  reduce using rule 71 (type_specifier)


State 22

    0 $accept: start_exec . $end

    $end  shift, and go to state 35


State 23

    1 start_exec: translation_unit .
    3 translation_unit: translation_unit . external_declaration

    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT      shift, and go to state 7
    INLINE     shift, and go to state 8
    INT        shift, and go to state 9
    LONG       shift, and go to state 10
    REGISTER   shift, and go to state 11
    RESTRICT   shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL       shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    $default  reduce using rule 1 (start_exec)

    external_declaration     go to state 36
    function_definition      go to state 25
    declaration              go to state 26
    declaration_specifiers   go to state 27
    storage_class_specifier  go to state 28
    type_specifier           go to state 29
    enum_specifier           go to state 30
    type_qualifier           go to state 31
    function_specifier       go to state 32


State 24

    2 translation_unit: external_declaration .

    $default  reduce using rule 2 (translation_unit)


State 25

    4 external_declaration: function_definition .

    $default  reduce using rule 4 (external_declaration)


State 26

    5 external_declaration: declaration .

    $default  reduce using rule 5 (external_declaration)


State 27

    6 function_definition: declaration_specifiers . declarator declaration_list_opt F H compound_statement
   43 declaration: declaration_specifiers . init_declarator_list_opt ';'

    '*'  shift, and go to state 37

    ';'       reduce using rule 45 (init_declarator_list_opt)
    $default  reduce using rule 92 (pointer_opt)

    init_declarator_list_opt  go to state 38
    init_declarator_list      go to state 39
    init_declarator           go to state 40
    declarator                go to state 41
    pointer_opt               go to state 42
    pointer                   go to state 43


State 28

   46 declaration_specifiers: storage_class_specifier . declaration_specifiers_opt

    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT      shift, and go to state 7
    INLINE     shift, and go to state 8
    INT        shift, and go to state 9
    LONG       shift, and go to state 10
    REGISTER   shift, and go to state 11
    RESTRICT   shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL       shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    $default  reduce using rule 51 (declaration_specifiers_opt)

    declaration_specifiers      go to state 44
    declaration_specifiers_opt  go to state 45
    storage_class_specifier     go to state 28
    type_specifier              go to state 29
    enum_specifier              go to state 30
    type_qualifier              go to state 31
    function_specifier          go to state 32


State 29

   47 declaration_specifiers: type_specifier . declaration_specifiers_opt

    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT      shift, and go to state 7
    INLINE     shift, and go to state 8
    INT        shift, and go to state 9
    LONG       shift, and go to state 10
    REGISTER   shift, and go to state 11
    RESTRICT   shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL       shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    $default  reduce using rule 51 (declaration_specifiers_opt)

    declaration_specifiers      go to state 44
    declaration_specifiers_opt  go to state 46
    storage_class_specifier     go to state 28
    type_specifier              go to state 29
    enum_specifier              go to state 30
    type_qualifier              go to state 31
    function_specifier          go to state 32


State 30

   72 type_specifier: enum_specifier .

    $default  reduce using rule 72 (type_specifier)


State 31

   48 declaration_specifiers: type_qualifier . declaration_specifiers_opt

    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT      shift, and go to state 7
    INLINE     shift, and go to state 8
    INT        shift, and go to state 9
    LONG       shift, and go to state 10
    REGISTER   shift, and go to state 11
    RESTRICT   shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL       shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    $default  reduce using rule 51 (declaration_specifiers_opt)

    declaration_specifiers      go to state 44
    declaration_specifiers_opt  go to state 47
    storage_class_specifier     go to state 28
    type_specifier              go to state 29
    enum_specifier              go to state 30
    type_qualifier              go to state 31
    function_specifier          go to state 32


State 32

   49 declaration_specifiers: function_specifier . declaration_specifiers_opt

    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT      shift, and go to state 7
    INLINE     shift, and go to state 8
    INT        shift, and go to state 9
    LONG       shift, and go to state 10
    REGISTER   shift, and go to state 11
    RESTRICT   shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL       shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    $default  reduce using rule 51 (declaration_specifiers_opt)

    declaration_specifiers      go to state 44
    declaration_specifiers_opt  go to state 48
    storage_class_specifier     go to state 28
    type_specifier              go to state 29
    enum_specifier              go to state 30
    type_qualifier              go to state 31
    function_specifier          go to state 32


State 33

   79 enum_specifier: ENUM IDENTIFIER .
   80 identifier_opt: IDENTIFIER .

    '{'       reduce using rule 80 (identifier_opt)
    $default  reduce using rule 79 (enum_specifier)


State 34

   77 enum_specifier: ENUM identifier_opt . '{' enumerator_list '}'
   78               | ENUM identifier_opt . '{' enumerator_list ',' '}'

    '{'  shift, and go to state 49


State 35

    0 $accept: start_exec $end .

    $default  accept


State 36

    3 translation_unit: translation_unit external_declaration .

    $default  reduce using rule 3 (translation_unit)


State 37

  107 pointer: '*' . type_qualifier_list_opt
  108        | '*' . type_qualifier_list_opt pointer

    CONST     shift, and go to state 3
    RESTRICT  shift, and go to state 12
    VOLATILE  shift, and go to state 18

    $default  reduce using rule 102 (type_qualifier_list_opt)

    type_qualifier           go to state 50
    type_qualifier_list_opt  go to state 51
    type_qualifier_list      go to state 52


State 38

   43 declaration: declaration_specifiers init_declarator_list_opt . ';'

    ';'  shift, and go to state 53


State 39

   44 init_declarator_list_opt: init_declarator_list .
   53 init_declarator_list: init_declarator_list . ',' init_declarator

    ','  shift, and go to state 54

    $default  reduce using rule 44 (init_declarator_list_opt)


State 40

   52 init_declarator_list: init_declarator .

    $default  reduce using rule 52 (init_declarator_list)


State 41

    6 function_definition: declaration_specifiers declarator . declaration_list_opt F H compound_statement
   54 init_declarator: declarator .
   55                | declarator . ASSIGN_OP initializer

    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT      shift, and go to state 7
    INLINE     shift, and go to state 8
    INT        shift, and go to state 9
    LONG       shift, and go to state 10
    REGISTER   shift, and go to state 11
    RESTRICT   shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL       shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21
    ASSIGN_OP  shift, and go to state 55

    '{'       reduce using rule 8 (declaration_list_opt)
    $default  reduce using rule 54 (init_declarator)

    declaration_list_opt     go to state 56
    declaration_list         go to state 57
    declaration              go to state 58
    declaration_specifiers   go to state 59
    storage_class_specifier  go to state 28
    type_specifier           go to state 29
    enum_specifier           go to state 30
    type_qualifier           go to state 31
    function_specifier       go to state 32


State 42

   90 declarator: pointer_opt . direct_declarator

    IDENTIFIER  shift, and go to state 60
    '('         shift, and go to state 61

    direct_declarator  go to state 62


State 43

   91 pointer_opt: pointer .

    $default  reduce using rule 91 (pointer_opt)


State 44

   50 declaration_specifiers_opt: declaration_specifiers .

    $default  reduce using rule 50 (declaration_specifiers_opt)


State 45

   46 declaration_specifiers: storage_class_specifier declaration_specifiers_opt .

    $default  reduce using rule 46 (declaration_specifiers)


State 46

   47 declaration_specifiers: type_specifier declaration_specifiers_opt .

    $default  reduce using rule 47 (declaration_specifiers)


State 47

   48 declaration_specifiers: type_qualifier declaration_specifiers_opt .

    $default  reduce using rule 48 (declaration_specifiers)


State 48

   49 declaration_specifiers: function_specifier declaration_specifiers_opt .

    $default  reduce using rule 49 (declaration_specifiers)


State 49

   77 enum_specifier: ENUM identifier_opt '{' . enumerator_list '}'
   78               | ENUM identifier_opt '{' . enumerator_list ',' '}'

    IDENTIFIER  shift, and go to state 63

    enumerator_list       go to state 64
    enumerator            go to state 65
    enumeration_constant  go to state 66


State 50

  109 type_qualifier_list: type_qualifier .

    $default  reduce using rule 109 (type_qualifier_list)


State 51

  107 pointer: '*' type_qualifier_list_opt .
  108        | '*' type_qualifier_list_opt . pointer

    '*'  shift, and go to state 37

    $default  reduce using rule 107 (pointer)

    pointer  go to state 67


State 52

  101 type_qualifier_list_opt: type_qualifier_list .
  110 type_qualifier_list: type_qualifier_list . type_qualifier

    CONST     shift, and go to state 3
    RESTRICT  shift, and go to state 12
    VOLATILE  shift, and go to state 18

    $default  reduce using rule 101 (type_qualifier_list_opt)

    type_qualifier  go to state 68


State 53

   43 declaration: declaration_specifiers init_declarator_list_opt ';' .

    $default  reduce using rule 43 (declaration)


State 54

   53 init_declarator_list: init_declarator_list ',' . init_declarator

    '*'  shift, and go to state 37

    $default  reduce using rule 92 (pointer_opt)

    init_declarator  go to state 69
    declarator       go to state 70
    pointer_opt      go to state 42
    pointer          go to state 43


State 55

   55 init_declarator: declarator ASSIGN_OP . initializer

    SIZEOF              shift, and go to state 71
    IDENTIFIER          shift, and go to state 72
    INTEGER_CONSTANT    shift, and go to state 73
    FLOATING_CONSTANT   shift, and go to state 74
    CHARACTER_CONSTANT  shift, and go to state 75
    STRING_LITERAL      shift, and go to state 76
    INCREMENT           shift, and go to state 77
    DECREMENT           shift, and go to state 78
    '{'                 shift, and go to state 79
    '('                 shift, and go to state 80
    '*'                 shift, and go to state 81
    '&'                 shift, and go to state 82
    '+'                 shift, and go to state 83
    '-'                 shift, and go to state 84
    '~'                 shift, and go to state 85
    '!'                 shift, and go to state 86
